@@ -110,7 +110,7 @@ void File::fetch (void)
 	// Restore acces and modification time
 	utime (address_.c_str(), &timbuf);
 
-	if ((unread_ == new_unread_) && (new_unread_.size() > 0))
+	if ((unread_ == new_unread_) && (unread_.size()>0))
 		status_ = MAILBOX_OLD;
 	else if (new_unread_.size() > 0)
 		status_ = MAILBOX_NEW;
